# trill

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yaml
egui_keyboard/src/: layouts.rs
linux/: AppRun  build.sh  build_arm64.sh  build_armhf.sh  build_i686.sh  trill.desktop
macos/: Info.plist.mako  build.sh  dmgbuild.settings.py
tango/: Cargo.toml
tango-signaling-server/src/: main.rs
tango-signaling-server/src/iceconfig/: turn.rs
tango/android_res/values/: colors.xml
tango/locales/de-DE/: common.ftl  main.ftl  play.ftl  settings.ftl  welcome.ftl
tango/locales/en-US/: common.ftl  main.ftl  play.ftl  settings.ftl  welcome.ftl
tango/locales/es-419/: common.ftl  main.ftl  play.ftl  settings.ftl  welcome.ftl
tango/locales/fr-FR/: common.ftl  main.ftl  play.ftl  settings.ftl  welcome.ftl
tango/locales/ja-JP/: common.ftl  input-mapping.ftl  main.ftl  play.ftl  settings.ftl  welcome.ftl
tango/locales/ko-KR/: common.ftl  debug.ftl  discord.ftl  escape.ftl  games.ftl  input-mapping.ftl  main.ftl  patches.ftl  play.ftl  replays.ftl  save.ftl  settings.ftl  updater.ftl  welcome.ftl
tango/locales/nl-NL/: common.ftl  main.ftl  play.ftl  settings.ftl  welcome.ftl
tango/locales/pt-BR/: common.ftl  main.ftl  play.ftl  settings.ftl  welcome.ftl
tango/locales/ru-RU/: common.ftl  main.ftl  play.ftl  settings.ftl  (+1 more)
tango/src/: config.rs  discord.rs  graphics.rs  gui.rs  input.rs  input_nostart.rs  main.rs  patch.rs  randomcode.rs  updater.rs
win/: build.sh  build_i686.sh  installer.nsi.mako  installer_i686.nsi.mako  resource.rc.mako
(+34 files in other folders)
