[workspace]
resolver = "2"
members = [
    "bps",
    "datachannel-wrapper",
    "egui_keyboard",
    "hqx",
    "input-helper",
    "mgba",
    "mmpx",
    "tango",
    "tango-dataview",
    "tango-filesync",
    "tango-gamedb",
    "tango-pvp",
    "tango-replaytool",
    "tango-signaling",
    "tango-signaling-server",
]

[workspace.package]
version = "0.1.0"

[workspace.dependencies]
eframe = { version = "0.31", features = ["wgpu", "android-game-activity"] }
egui = "0.31"

[workspace.lints.clippy]
new_without_default = "allow"
type_complexity = "allow"
identity_op = "allow"
blocks_in_conditions = "allow"
redundant_closure = "allow"
too_many_arguments = "allow"
